# compilers

./: Brewfile
01.cmake/cmake_in_action/t7_find_package_myapp/mylib/: CMakeLists.txt
01.cmake/notes/: 3.configure_file.txt  5.cmake_variables.txt
01.gcc/: 0.gcc_notes.md  11.gcc_lrt_lz_lm_lc.txt  15.g++_sample.md  16.gcc_E_MACRO.md  18.dynamic.md  3.gcc_fstrict_aliasing.txt  5.gcc_important_paras.txt
01.gcc/12.gcc-fno-elide-constructors/: index.md
01.gcc/7.example_gcov/: a.out
02.cmake/notes/: 4.add_custom_target_and_command.txt
02.gcc_notes/: 7.gcc_fprofile_arcs_ftest_coverage.txt  8.gcc_gprof.txt  9.gcc_frtti.txt
02.gcc_notes/12.gcc-fno-elide-constructors/: index.json
02.gcc_notes/7.example_gcov/: Hello.gcda
02.gcc_notes/8.example_gprof/: gprof.c
03.lex_yacc/code/: run.sh
05.elf/elf_all/: objdump.out
05.elf/elf_dynamic_relocate/: command.txt  readelf.out  section.out
05.elf/elf_dynsym/: command.txt
05.elf/elf_format/: ELF_notes.mhtml  objdump_readelf.mhtml
05.elf/elf_symtab/: command.txt  symtab.readelf.txt
05.elf/ldd/: command.txt  ldd.out
06.vscode/Class_3/: inefficiency.cpp
06.vscode/cmake_all/: CMakeLists.txt  build.sh  xx
06.vscode/cmake_swap/: build.sh
06.vscode/helloworld/: a.out  helloworld  helloworld.cpp
06.vscode/mac_debug/: main.cpp  main.out
07.gdb/: 01.gdb_asm.md  02.starti.md  03.proc_mapping.md  04.pmap.md  gdb.md
08.LLDB/mycode/: bak1.cpp  combination  combination.cpp  fenwick_tree  fenwick_tree.cpp  kmp.cpp
08.LLDB/vscode/: a.out  main.c
09.rvcc/rvcc/: codegen.c  test.sh  tokenize.c  type.c
09.wheels/rvcc/: CMakeLists.txt  parse.c
10.tools/ar/: ar.md
10.tools/c++filt/: hello_world.cpp
10.tools/nm/: command.txt  symtab.out
10.tools/objdump/: parameters.md
10.tools/otool/: otool.md
11.Makefile/MakefileShare/: README.md
11.Makefile/cpp_makefile_demo/: .cproject  .project  Makefile  README.md
2.compile_2asm/: hello.gcc.s
bcloud/: BCLOUD
chapter3/: command.txt
cmake/: cmake_notes.txt
cmake.old/Demo2/: CMakeLists.txt  MathFunctions.cc
cmake.old/Demo3/: main.cc
cmake.old/Demo4/: CMakeLists.txt
cmake/Demo1/: CMakeCache.txt  README  main.cc
cmake/Demo2/: CMakeLists.txt  README  main.cc
cmake/Demo3/: CMakeLists.txt  README  main.cc
cmake/Demo4/: CMakeCache.txt  Demo  Makefile  README  cmake_install.cmake  config.h.in  main.cc
cmake/Demo5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  install_manifest.txt
cmake/Demo6/: README  cmake_install.cmake  config.h  main.cc
cmake/Demo7/: CTestTestfile.cmake  Makefile  README  cmake_install.cmake  config.h.in
cmake/Demo8/: CMakeLists.txt  CPackConfig.cmake  CTestTestfile.cmake  README  cmake_install.cmake  config.h.in  main.cc
cmake/cmake_in_action/t8_find_package_demo9/: CMakeLists.txt
cmake/cmake_in_action/t8_find_package_demo9/install/demo9/include/: demo9.h
cmake/cmake_step_by_step/static_dynamic_lib/cmake_dynamic_sample/use_lib/src/: CMakeLists.txt
cmake/notes/: 0.cmake_notes.txt  1.cmake_command_manual.txt  3.Address_Sanitizer.txt  5.cmake_variables.txt
cmake/static_dynamic_lib/cmake2/src/hellolib/: CMakeLists.txt
cmake/static_dynamic_lib/cmake_static_sample/src/mycmake/: CMakeLists.txt
cmake/static_dynamic_lib/cmake_static_sample/src/mycmake/src/: mycmake.cpp
cmake_in_action/t3_gen_libs/: CMakeLists.txt
cmake_in_action/t4_use_libs/: CMakeLists.txt
cmake_in_action/t5/: CMakeLists.txt
cmake_in_action/t5/src/: CMakeLists.txt
cmake_in_action/t6_find_package_ourselves/: CMakeLists.txt
cmake_in_action/t7_find_package_myapp/myapp/: CMakeLists.txt  myapp.c
cmake_in_action/t8_find_package_demo9/: demo9.cpp  demo9_main.cpp
cmake_in_action/t9_gen_libs/: CMakeLists.txt  README
cmake_in_action/t9_gen_libs/lib/: CMakeLists.txt  hello.h
cmake_practice/t1/: CmakeLists.txt
cmake_practice/t2_install/: CMakeLists.txt
compile_2asm/: command.txt
elf/: command.txt  elf.header  objdump.section  readelf.section
elf/elf_all/: command.txt  program2  readelf.out
elf/elf_dynamic_relocate/: GOT.out
elf/elf_dynamic_relocate_GOT/: command.txt
elf/elf_dynamic_section/: command.txt  dynamic.out
elf/elf_dynsym/: dynsym.out  sym.out
elf/elf_program_header_table/: command.txt  segment.out
gcc/: 1.gcc_parameters.txt  2.gcc_fno-omit-frame-pointer.txt  gcc_notes.txt
gcc/hello/: hello.c  (+1 more)
gcc_notes/: 0.gcc_notes.md  0.gcc_notes.txt  10.gcc_Wno_error.txt  13.permissive.md  14.verbos  4.gcc_fabi_version.txt
lex_yacc/: Lex和Yacc工具使用方法.doc  yacc.pptx
objdump/: cmd.md  objdump.md  parameters.md
tools/: 1.txt  2.txt  a.out  command.txt  out.txt
(+401 files in other folders)
